fix(gui-v2): overflow container on signin/signup forms
# What's changed?

* increase signup form size by logo height so we can properly scroll the form

--- a/packages/nc-gui-v2/assets/style-v2.css
+++ b/packages/nc-gui-v2/assets/style-v2.css
@@ -2,7 +2,18 @@ html,
 body,
 #__nuxt,
 .v-application__wrap {
-    @apply m-0 h-[100vh] w-[100vw] bg-white dark:(bg-black text-white);
+    @apply m-0 h-full w-full bg-white dark:(bg-black text-white);
+}
+
+.v-main {
+    @apply w-full h-full;
+    overflow: hidden;
+    flex: unset !important;
+}
+
+.v-main .v-main__wrap {
+    @apply flex-0 w-full relative scrollbar-thin-primary;
+    overflow-x: hidden;
 }
 
 nav,
